Delete book by id implemented