@@ -10,6 +10,15 @@ scalaVersion := "2.13.8"
 libraryDependencies += guice
 libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % Test
 libraryDependencies += "org.scalatestplus" %% "mockito-3-12" % "3.2.10.0" % Test
+libraryDependencies ++= Seq(
+  "com.google.inject"            % "guice"                % "5.1.0",
+  "com.google.inject.extensions" % "guice-assistedinject" % "5.1.0"
+)
+//libraryDependencies += "net.jodah" % "typetools" % "0.6.3"
+//Test / javaOptions ++= Seq(
+//  "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+//  "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED"
+//)
 
 
 // Adds additional packages into Twirl
